Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130801

qmlls: gotodefinition does not work on singletons

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.11.0 FF, 6.11
    • 6.8
    • QML: Tooling
    • None
    • dfb6642aa (dev), 6109b3a58 (dev)

      It seems that go to definition does not work on singletons:

      (taken from the https://git.qt.io/olwolff/awesome-ping-pong-scoreboard project)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sami.shalayel Sami Shalayel
            sami.shalayel Sami Shalayel
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes