qmlls: implement go to definition for singleton types

Implement go to definition for singleton types defined from C++ or QML.

Fixes: QTBUG-130801
Task-number: QTBUG-128393
Change-Id: Ib1f44886d2028c23ef60084ff045b44e99d897bc
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>